Updated code and cleaned up project files

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>🏡 House Predictor</h2>
+        <h2>🏡 House Price Predictor</h2>
         <div class="nav-links">
             <a href="#">Home</a>
             <a href="#">Contact Us</a>
